--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,19 +1,21 @@
-name: Daily Woo Export
+name: Daily WooCommerce Export
 
 on:
   schedule:
-    - cron: '0 23 * * *'    # 每天早上 7:00（HKT）
+    - cron: '0 23 * * *'  # 每天早上 7:00 (HKT)
   workflow_dispatch:
 
 jobs:
   export:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
-        with: { python-version: '3.x' }
+        with: 
+          python-version: '3.x'
 
       - name: Install dependencies
         run: pip install -r requirements.txt
@@ -24,7 +26,25 @@ jobs:
         run: |
           echo "$GCP_SA_JSON" > /tmp/credentials.json
 
-      - name: Run export script
+      - name: Run availability script
+        env:
+          CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
+          CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
+          WC_SITE: ${{ secrets.WC_SITE }}
+          SHEET_NAME: ${{ secrets.SHEET_NAME }}
+          GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
+        run: python availability.py
+
+      - name: Run archive orders script
+        env:
+          CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
+          CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
+          WC_SITE: ${{ secrets.WC_SITE }}
+          SHEET_NAME: ${{ secrets.SHEET_NAME }}
+          GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
+        run: python archive_orders.py
+
+      - name: Run Woo Orders export script
         env:
           CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
@@ -33,7 +53,7 @@ jobs:
           GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
         run: python script1.py
 
-      - name: Run tour export script
+      - name: Run Tour Orders export script
         env:
           CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
@@ -42,7 +62,7 @@ jobs:
           GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
         run: python tour.py
 
-      - name: Run rescheduled script
+      - name: Run Rescheduled Orders export script
         env:
           CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
