--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,37 +1,86 @@
-name: Daily Updates
+name: Daily WooCommerce Export
+
 on:
   schedule:
-    - cron: '0 1 * * *' # 每天香港時間上午9點 (UTC+8 -> UTC 1:00)
+    - cron: '0 23 * * *'  # 每天早上 7:00 (HKT, UTC 23:00)
+    - cron: '0 19 * * *'  # 每天凌晨 3:00 (HKT, UTC 19:00)
+    - cron: '0 4 * * *'   # 每天中午 12:00 (HKT, UTC 4:00)
+    - cron: '0 7 * * *'   # 每天下午 3:00 (HKT, UTC 7:00)
   workflow_dispatch:
 
 jobs:
-  update_orders:
+  export:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v4
-        with:
+        with: 
           python-version: '3.9'
+
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests gspread oauth2client gspread-formatting pytz
-      - name: Run archive_orders.py
+        run: pip install -r requirements.txt
+
+      - name: Write credentials.json
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
         run: |
           echo "$GOOGLE_CREDENTIALS" > /tmp/credentials.json
-          python archive_orders.py
-      - name: Run script1.py
+
+      - name: Run availability script
+        if: github.event.schedule == '0 23 * * *'  # 僅在 7:00 AM 運行
+        env:
+          CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
+          CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
+          WC_SITE: "https://kayarine.club/wp-json/wc/v3/orders"
+          SHEET_NAME: ${{ secrets.SHEET_NAME }}
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+        run: python availability.py
+
+      - name: Run archive orders script
+        if: github.event.schedule == '0 23 * * *' || github.event.schedule == '0 4 * * *' || github.event.schedule == '0 7 * * *'  # 在 7:00 AM, 12:00 PM, 3:00 PM 運行
+        env:
+          CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
+          CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
+          WC_SITE: "https://kayarine.club/wp-json/wc/v3/orders"
+          SHEET_NAME: ${{ secrets.SHEET_NAME }}
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+        run: python archive_orders.py
+
+      - name: Run Woo Orders export script
+        if: github.event.schedule == '0 23 * * *'  # 僅在 7:00 AM 運行
+        env:
+          CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
+          CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
+          WC_SITE: "https://kayarine.club/wp-json/wc/v3/orders"
+          SHEET_NAME: ${{ secrets.SHEET_NAME }}
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+        run: python script1.py
+
+      - name: Run Tour Orders export script
+        if: github.event.schedule == '0 23 * * *'  # 僅在 7:00 AM 運行
+        env:
+          CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
+          CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
+          WC_SITE: "https://kayarine.club/wp-json/wc/v3/orders"
+          SHEET_NAME: ${{ secrets.SHEET_NAME }}
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+        run: python tour.py
+
+      - name: Run Rescheduled Orders export script
+        if: github.event.schedule == '0 23 * * *'  # 僅在 7:00 AM 運行
+        env:
+          CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
+          CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
+          WC_SITE: "https://kayarine.club/wp-json/wc/v3/orders"
+          SHEET_NAME: ${{ secrets.SHEET_NAME }}
+          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+        run: python rescheduled.py
+
+      - name: Run Update Arrival Status script
+        if: github.event.schedule == '0 19 * * *'  # 僅在 3:00 AM 運行
         env:
           GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-        run: |
-          echo "$GOOGLE_CREDENTIALS" > /tmp/credentials.json
-          python script1.py
-      - name: Run availability.py
-        env:
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-        run: |
-          echo "$GOOGLE_CREDENTIALS" > /tmp/credentials.json
-          python availability.py
+        run: python update_arrival_status.py
