--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -23,22 +23,11 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Check GOOGLE_CREDENTIALS
-        run: |
-          if [ -z "$GOOGLE_CREDENTIALS" ]; then
-            echo "錯誤：GOOGLE_CREDENTIALS 環境變數為空"
-            exit 1
-          else
-            echo "GOOGLE_CREDENTIALS 已設置"
-          fi
-        env:
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-
       - name: Write credentials.json
         env:
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
         run: |
-          echo "$GOOGLE_CREDENTIALS" > /tmp/credentials.json
+          echo "$GCP_SA_JSON" > /tmp/credentials.json
 
       - name: Run availability script
         if: github.event.schedule == '0 23 * * *'  # 僅在 7:00 AM 運行
@@ -47,7 +36,7 @@ jobs:
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
           WC_SITE: "https://kayarine.club/wp-json/wc/v3/orders"
           SHEET_NAME: ${{ secrets.SHEET_NAME }}
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
         run: python availability.py
 
       - name: Run archive orders script
@@ -57,7 +46,7 @@ jobs:
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
           WC_SITE: "https://kayarine.club/wp-json/wc/v3/orders"
           SHEET_NAME: ${{ secrets.SHEET_NAME }}
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
         run: python archive_orders.py
 
       - name: Run Woo Orders export script
@@ -67,7 +56,7 @@ jobs:
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
           WC_SITE: "https://kayarine.club/wp-json/wc/v3/orders"
           SHEET_NAME: ${{ secrets.SHEET_NAME }}
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
         run: python script1.py
 
       - name: Run Tour Orders export script
@@ -77,7 +66,7 @@ jobs:
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
           WC_SITE: "https://kayarine.club/wp-json/wc/v3/orders"
           SHEET_NAME: ${{ secrets.SHEET_NAME }}
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
         run: python tour.py
 
       - name: Run Rescheduled Orders export script
@@ -87,11 +76,11 @@ jobs:
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
           WC_SITE: "https://kayarine.club/wp-json/wc/v3/orders"
           SHEET_NAME: ${{ secrets.SHEET_NAME }}
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
         run: python rescheduled.py
 
       - name: Run Update Arrival Status script
         if: github.event.schedule == '0 19 * * *'  # 僅在 3:00 AM 運行
         env:
-          GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
+          GCP_SA_JSON: ${{ secrets.GCP_SA_JSON }}
         run: python update_arrival_status.py
